[fix] add_wallet JPY以外の通貨更新時、JPYが更新される #3

--- a/app/views/wallets/add.html.erb
+++ b/app/views/wallets/add.html.erb
@@ -1,4 +1,4 @@
 <h1>お財布追加</h1>
-<%= render 'form', wallet: @wallet %>
+<%= render partial: 'form', locals: {wallet: @wallet, url: add_money_wallet_path} %>
 <%= link_to 'Show', @wallet %> |
 <%= link_to 'Back', wallets_path %>
