--- a/app/views/wallets/edit.html.erb
+++ b/app/views/wallets/edit.html.erb
@@ -1,6 +1,4 @@
 <h1>Editing Wallet</h1>
-
-<%= render 'form', wallet: @wallet %>
-
+<%= render partial: 'form', locals: {wallet: @wallet, url: @wallet} %>
 <%= link_to 'Show', @wallet %> |
 <%= link_to 'Back', wallets_path %>
