--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -22,6 +22,7 @@
     <% end %>
   </tbody>
 </table>
-<br>
-<%= link_to 'New Wallet', new_wallet_path %> | 
-<%= link_to 'お財布追加', add_wallet_path(@wallets.where(currency_type: :jpy).first) %>
+<p>
+  <%= link_to 'JPYお財布追加', add_wallet_path(@wallets.where(currency_type: :jpy).first), {class: "btn btn-default"} %> |
+  <%= link_to 'New Wallet', new_wallet_path %>
+</p>
