[fix] 取引履歴：取得対象の追加 close #15

--- a/app/views/currency_pairs/index.html.erb
+++ b/app/views/currency_pairs/index.html.erb
@@ -4,10 +4,10 @@
   <thead>
     <tr>
       <th>Currency pair</th>
-      <th>Unit min</th>
-      <th>Unit step</th>
-      <th>Unit digest</th>
-      <th>Currency digest</th>
+      <th>最小売買単位</th>
+      <th>増加単位</th>
+      <th>数量：小数N桁丸め</th>
+      <th>金額：小数N桁丸め(-は10円単位丸め)</th>
       <th colspan="3"></th>
     </tr>
   </thead>
