[change] 未成約一覧のお財布処理無効化 #19

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -176,9 +176,9 @@ data = [['date','money']]
                   <td><%= trade_history.transaction_id %></td>
                   <td><%= trade_history.currency_pair %></td>
                   <td><%= t(trade_history.your_action) %></td>
-                  <td><%= trade_history.price.to_s(:delimited)%></td>
+                  <td><%= trade_history.price.round.to_s(:delimited)%></td>
                   <td><%= trade_history.amount.to_s(:delimited)%></td>
-                  <td><%= trade_history.contract_price.to_s(:delimited)%></td>
+                  <td><%= trade_history.contract_price.round.to_s(:delimited)%></td>
                   <td><%= trade_history.fee.to_s(:delimited)%></td>
                   <td><%= trade_history.fee_amount.to_s(:delimited)%></td>
                   <td><%= trade_history.order_id %></td>
