--- a/app/views/wallet_histories/_form.html.erb
+++ b/app/views/wallet_histories/_form.html.erb
@@ -2,25 +2,25 @@
   <% if wallet_history.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(wallet_history.errors.count, "error") %> prohibited this wallet_history from being saved:</h2>
-
       <ul>
-      <% wallet_history.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% wallet_history.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
-
   <div class="field">
     <%= form.label :currency_type %>
     <%= form.text_field :currency_type, id: :wallet_history_currency_type %>
   </div>
-
   <div class="field">
     <%= form.label :money %>
     <%= form.text_field :money, id: :wallet_history_money %>
   </div>
-
+  <div class="field">
+    <%= form.label :trade_time %>
+    <%= form.text_field :trade_time %>
+  </div>
   <div class="actions">
     <%= form.submit %>
   </div>
