--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,7 +1,17 @@
-body {
-	padding-top: 70px;
+.margin_bottom{
+  margin-bottom: 10px;
 }
 
-.margin_bottom{
-	margin-bottom: 10px;
+.bs-callout {
+  padding: 10px;
+  margin: 0;
+  border: 1px solid #eee;
+  border-left-width: 1px;
+  border-left-color: rgb(238, 238, 238);
+  border-left-width: 5px;
+  border-radius: 3px;
+}
+
+.bs-callout-info {
+  border-left-color: #1b809e;
 }
