--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,21 +8,27 @@ data = [['date','money']]
 
 %>
 <p id="notice"><%= notice %></p>
-<div class="bs-callout bs-callout-info">
-  <div class="btn-group">
-    <button class="btn btn-default">掛け率</button>
-    <% @t_settings.each do |s| %>
-      <button class="btn btn-default"><%= s.trade_type %>:<%= s.percent.to_s %>%</button>
-    <% end %>
+<div class="row">
+  <div class="col-md-6">
+    <h1>りずぼんちゃん　時価総額(JPY):<%=get_market_capital.round.to_s(:delimited)%>円</h1>
   </div>
-  <div class="btn-group">
-    <button class="btn btn-default">対象通貨</button>
-    <% @targets.each do |t| %>
-      <button class="btn btn-default"><%= t.currency_type %></button>
-    <% end %>
+  <div class="col-md-6">
+    <div class="bs-callout bs-callout-info">
+      <div class="btn-group btn-group-sm">
+        <button class="btn btn-default">掛け率</button>
+        <% @t_settings.each do |s| %>
+          <button class="btn btn-default"><%= s.trade_type %>:<%= s.percent.to_s %>%</button>
+        <% end %>
+      </div>
+      <div class="btn-group btn-group-sm">
+        <button class="btn btn-default">対象通貨</button>
+        <% @targets.each do |t| %>
+          <button class="btn btn-default"><%= t.currency_type %></button>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
-<h1>りずぼんちゃん　時価総額(JPY):<%=get_market_capital.round.to_s(:delimited)%>円</h1>
 <div>
   <%= link_to 'りずぼんちゃん実行', {:controller => "exec", :action => "index"}, { :class => "btn btn-primary" } %>
   <%= link_to "Zaif同期", sync_zaif_active_orders_path, {class: "btn btn-default"}%>
