[update] 損益計算書 #29

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -15,3 +15,12 @@
 .bs-callout-info {
   border-left-color: #1b809e;
 }
+
+.txt-right{
+	text-align: right;
+}
+
+//pl
+#pl th{
+  text-align: right;
+}
