--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
             <li><%= link_to 'コイン価格履歴', currency_histories_path %></li>
             <li><%= link_to '未約定注文一覧', active_orders_path %></li>
             <li><%= link_to '取引履歴', trade_histories_path %></li>
+            <li><%= link_to 'PL', reports_pl_path %></li>
             <li><%= link_to '実行ログ', bots_path %></li>
             <li><%= link_to '入出金履歴', wallet_histories_path %></li>
             <li><%= link_to '財布', wallets_path %></li>
