--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -3,10 +3,10 @@
 <table class="table">
   <thead>
     <tr>
-      <th>currency_type</th>
-      <th>trade_type</th>
+      <th>c_type</th>
+      <th>trade</th>
       <th>created_at</th>
-      <th colspan="3"></th>
+      <th class="hidden-xs" colspan="3"></th>
     </tr>
   </thead>
   <tbody>
@@ -19,9 +19,9 @@
         </td>
         <td><%= t(bot.trade_type) %></td>
         <td><%= bot.created_at.to_s %></td>
-        <td><%= link_to 'Show', bot %></td>
-        <td><%= link_to 'Edit', edit_bot_path(bot) %></td>
-        <td><%= link_to 'Destroy', bot, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="hidden-xs"><%= link_to 'Show', bot %></td>
+        <td class="hidden-xs"><%= link_to 'Edit', edit_bot_path(bot) %></td>
+        <td class="hidden-xs"><%= link_to 'Destroy', bot, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
       <% trade_type = bot.trade_type %>
     <% end %>
