--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,139 +7,96 @@ data = [['date','money']]
 }
 
 %>
-<p id="notice"><%= notice %></p>
-<div class="row">
-  <div class="col-md-3">
-    <h1>りずぼんちゃん</h1>
-  </div>
-  <div class="col-md-3">
-    <h2>時価総額 <%=get_market_capital.round.to_s(:delimited)%>円</h2>
-  </div>
-  <div class="col-md-6">
-    <div class="bs-callout bs-callout-info">
-      <div class="btn-group btn-group-sm hidden-xs">
-        <button class="btn btn-default">掛け率</button>
-        <% @t_settings.each do |s| %>
-          <a class="btn btn-default" href="<%= edit_trade_setting_path(s) %>">
-            <%= s.trade_type %>:<%= s.percent.to_s %>%
-          </a>
-        <% end %>
-      </div>
-      <div class="btn-group btn-group-sm">
-        <button class="btn btn-default">対象通貨</button>
-        <% @targets.each do |t| %>
-          <a class="btn btn-default" href="<%= targets_path %>">
-            <%= t.currency_type %>
-          </a>
-        <% end %>
+<div id="home">
+  <p id="notice"><%= notice %></p>
+  <div class="row">
+    <div class="col-md-3">
+      <h1>りずぼんちゃん</h1>
+    </div>
+    <div class="col-md-3">
+      <h2>時価総額 <%=get_market_capital.round.to_s(:delimited)%>円</h2>
+    </div>
+    <div class="col-md-6">
+      <div class="bs-callout bs-callout-info">
+        <div class="btn-group btn-group-sm hidden-xs">
+          <button class="btn btn-default">掛け率</button>
+          <% @t_settings.each do |s| %>
+            <a class="btn btn-default" href="<%= edit_trade_setting_path(s) %>">
+              <%= s.trade_type %>:<%= s.percent.to_s %>%
+            </a>
+          <% end %>
+        </div>
+        <div class="btn-group btn-group-sm">
+          <button class="btn btn-default">対象通貨</button>
+          <% @targets.each do |t| %>
+            <a class="btn btn-default" href="<%= targets_path %>">
+              <%= t.currency_type %>
+            </a>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <%= link_to 'りずぼんちゃん実行', {:controller => "exec", :action => "index"}, { :class => "btn btn-danger navbar-btn" } %>
-      <%= link_to "Zaif同期", sync_zaif_active_orders_path, {class: "btn btn-default navbar-btn"}%>
-    </div>
-  </div>
-</nav>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript">
-  google.charts.load('current', {'packages':['corechart']});
-  google.charts.setOnLoadCallback(drawChart);
-  
-  function drawChart() {
-    var $w_data = JSON.parse($("#wallet_history").text());
-  // 'false' means that the first row contains labels, not data.
-  var data = google.visualization.arrayToDataTable($w_data,false);
-  var options = {
-    hAxis: {
-      title: '入出金履歴',
-      slantedTextAngle: 90
-    },
-    width: 1500,
-    height: 500,
-    legend: { position: 'none'}
-  };
-  
-  var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
-  chart.draw(data, options);
-  }
-</script>
-<div id="wallet_history" class="hide">
-  <%= data %>
-</div>
-<div id="chart_div" class="hidden-xs <%= 'hide' if not @wallet_histories.any? %>"></div>
-<div class="row">
-  <!--wallet-->
-  <div class="col-md-3">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        お財布
-      </div>
-      <div class="panel-body">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Currency type</th>
-              <th>Money</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @wallets.each do |wallet| %>
-              <tr>
-                <td>
-                  <%= wallet.currency_type %>
-                  <% if wallet.is_loscat %>
-                    <span class="label label-danger">loscut</span>
-                  <% end %>
-                </td>
-                <td><%= wallet.money.to_s(:delimited) %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <%= link_to 'りずぼんちゃん実行', {:controller => "exec", :action => "index"}, { :class => "btn btn-danger navbar-btn" } %>
+        <%= link_to "Zaif同期", sync_zaif_active_orders_path, {class: "btn btn-default navbar-btn"}%>
       </div>
     </div>
+  </nav>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script type="text/javascript">
+    google.charts.load('current', {'packages':['corechart']});
+    google.charts.setOnLoadCallback(drawChart);
+    
+    function drawChart() {
+      var $w_data = JSON.parse($("#wallet_history").text());
+    // 'false' means that the first row contains labels, not data.
+    var data = google.visualization.arrayToDataTable($w_data,false);
+    var options = {
+      hAxis: {
+        title: '入出金履歴',
+        slantedTextAngle: 90
+      },
+      width: 1500,
+      height: 500,
+      legend: { position: 'none'}
+    };
+    
+    var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+    chart.draw(data, options);
+      }
+  </script>
+  <div id="wallet_history" class="hide">
+    <%= data %>
   </div>
-  <!--active order-->
-  <div class="col-md-9">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        未約定注文一覧
-      </div>
-      <div class="panel-body">
-        <div class="table-responsive">
+  <div id="chart_div" class="hidden-xs <%= 'hide' if not @wallet_histories.any? %>"></div>
+  <div class="row">
+    <!--wallet-->
+    <div class="col-md-3">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          お財布
+        </div>
+        <div class="panel-body">
           <table class="table">
             <thead>
               <tr>
-                <th class="hidden-xs"></th>
-                <th>取引日</th>
-                <th class="hidden-xs">transaction_id</th>
-                <th>通貨</th>
-                <th>区分</th>
-                <th>単価</th>
-                <th>数量</th>
-                <th>約定金額</th>
-                <th>売り下限</th>
+                <th>Currency type</th>
+                <th>Money</th>
               </tr>
             </thead>
             <tbody>
-              <% @active_orders.each do |active_order| %>
+              <% @wallets.each do |wallet| %>
                 <tr>
-                  <td class="hidden-xs">
-                    <%= link_to "キャンセル", cancel_active_order_path(active_order.order_id),
-                  {class: "btn btn-warning btn-xs", data: {confirm: "cancel?"} } %>
+                  <td>
+                    <%= wallet.currency_type %>
+                    <% if wallet.is_loscat %>
+                      <span class="label label-danger">loscut</span>
+                    <% end %>
                   </td>
-                  <td><%= Time.at(active_order.timestamp.to_i) %></td>
-                  <td class="hidden-xs"><%= active_order.transaction_id %></td>
-                  <td><%= active_order.currency_pair %></td>
-                  <td><%= t(active_order.action) %></td>
-                  <td><%= active_order.price.to_s(:delimited) %></td>
-                  <td><%= active_order.amount.to_s(:delimited) %></td>
-                  <td><%= active_order.contract_price.round.to_s(:delimited) %></td>
-                  <td><%= active_order.lower_limit %></td>
+                  <td><%= wallet.money.to_s(:delimited) %></td>
                 </tr>
               <% end %>
             </tbody>
@@ -147,78 +104,127 @@ data = [['date','money']]
         </div>
       </div>
     </div>
-  </div>
-</div>
-<div class="row">
-  <!--bots-->
-  <div class="col-md-3 hidden-xs">
-    <div class="panel panel-default">
-      <div class="panel-heading">実行結果</div>
-      <div class="panel-body table-responsive">
-        <table class="table">
-          <tbody>
-            <% trade_type = nil %>
-            <% @bots.each do |bot| %>
-              <% #連続待ちの場合は無視 %>
-              <% next if trade_type == bot.trade_type and (trade_type == "wait" or trade_type == "相場安定待ち" ) %>
-              <tr class="<%=label_state(bot.trade_type)%>">
-                <td>
-                  <%= bot.created_at.to_s %><br>
-                  <div class="row">
-                    <div class="col-md-2">
-                      <span class="label label-<%=label_state(bot.trade_type)%>"><%= bot.currency_type %></span>
-                    </div>
-                    <div class="col-md-10">
-                      <%= t(bot.trade_type) %>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <% trade_type = bot.trade_type %>
-            <% end %>
-          </tbody>
-        </table>
+    <!--active order-->
+    <div class="col-md-9">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          未約定注文一覧
+        </div>
+        <div class="panel-body">
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th class="hidden-xs"></th>
+                  <th>取引日</th>
+                  <th class="hidden-xs">transaction_id</th>
+                  <th>通貨</th>
+                  <th>区分</th>
+                  <th>単価</th>
+                  <th>数量</th>
+                  <th>約定金額</th>
+                  <th>売り下限</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @active_orders.each do |active_order| %>
+                  <tr>
+                    <td class="hidden-xs">
+                      <%= link_to "キャンセル", cancel_active_order_path(active_order.order_id),
+                  {class: "btn btn-warning btn-xs", data: {confirm: "cancel?"} } %>
+                    </td>
+                    <td><%= Time.at(active_order.timestamp.to_i) %></td>
+                    <td class="hidden-xs"><%= active_order.transaction_id %></td>
+                    <td><%= active_order.currency_pair %></td>
+                    <td><%= t(active_order.action) %></td>
+                    <td><%= active_order.price.to_s(:delimited) %></td>
+                    <td><%= active_order.amount.to_s(:delimited) %></td>
+                    <td><%= active_order.contract_price.round.to_s(:delimited) %></td>
+                    <td><%= active_order.lower_limit %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <!--trade history-->
-  <div class="col-md-9">
-    <div class="panel panel-default">
-      <div class="panel-heading">取引履歴</div>
-      <div class="panel-body">
-        <div class="table-responsive">
+  <div class="row">
+    <!--bots-->
+    <div class="col-md-3 hidden-xs">
+      <div class="panel panel-default">
+        <div class="panel-heading">実行結果</div>
+        <div class="panel-body table-responsive">
           <table class="table">
-            <thead>
-              <tr>
-                <th>取引日</th>
-                <th class="hidden-xs">transaction_id</th>
-                <th>通貨</th>
-                <th>区分</th>
-                <th>単価</th>
-                <th>数量</th>
-                <th>約定代金</th>
-                <th>fee</th>
-                <th>fee_amount</th>
-                <th>order_id</th>
-              </tr>
-            </thead>
             <tbody>
-              <% @trade_histories.each do |trade_history| %>
-                <tr>
-                  <td><%= Time.at(trade_history.timestamp.to_i) %></td>
-                  <td class="hidden-xs"><%= trade_history.transaction_id %></td>
-                  <td><%= trade_history.currency_pair %></td>
-                  <td><%= t(trade_history.your_action) %></td>
-                  <td><%= trade_history.price.to_s(:delimited)%></td>
-                  <td><%= trade_history.amount.to_s(:delimited)%></td>
-                  <td><%= trade_history.contract_price.round.to_s(:delimited)%></td>
-                  <td><%= trade_history.fee.to_s(:delimited)%></td>
-                  <td><%= trade_history.fee_amount.to_s(:delimited)%></td>
-                  <td><%= trade_history.order_id %></td>
+              <% trade_type = nil %>
+              <% @bots.each do |bot| %>
+                <% #連続待ちの場合は無視 %>
+                <% next if trade_type == bot.trade_type and (trade_type == "wait" or trade_type == "相場安定待ち" ) %>
+                <tr class="<%=label_state(bot.trade_type)%>">
+                  <td>
+                    <%= bot.created_at.to_s %><br>
+                    <div class="row">
+                      <div class="col-md-2">
+                        <span class="label label-<%=label_state(bot.trade_type)%>"><%= bot.currency_type %></span>
+                      </div>
+                      <div class="col-md-10">
+                        <%= t(bot.trade_type) %>
+                      </div>
+                    </div>
+                  </td>
                 </tr>
+                <% trade_type = bot.trade_type %>
               <% end %>
             </tbody>
           </table>
+        </div>
+      </div>
+    </div>
+    <!--trade history-->
+    <div class="col-md-9">
+      <div class="panel panel-default">
+        <div class="panel-heading">取引履歴</div>
+        <div class="panel-body">
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>取引日</th>
+                  <th class="hidden-xs">transaction_id</th>
+                  <th>通貨</th>
+                  <th>区分</th>
+                  <th>単価</th>
+                  <th>数量</th>
+                  <th>約定代金</th>
+                  <th>利益</th>
+                  <th>手数料</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @trade_histories.each do |trade_history| %>
+                  <%
+              if trade_history.your_action == "ask" and trade_history.ask_capital.present?
+                capital = trade_history.ask_capital.capital.round
+                label = 0 < capital  ? "bg-info" : "bg-danger"
+              end 
+              %>
+                  <tr class="<%= label %>">
+                    <td><%= Time.at(trade_history.timestamp.to_i) %></td>
+                    <td class="hidden-xs"><%= trade_history.transaction_id %></td>
+                    <td><%= trade_history.currency_pair %></td>
+                    <td><%= t(trade_history.your_action) %></td>
+                    <td><%= trade_history.price.to_s(:delimited)%></td>
+                    <td><%= trade_history.amount.to_s(:delimited)%></td>
+                    <td><%= trade_history.contract_price.round.to_s(:delimited)%></td>
+                    <td class="txt-right"><%= capital.to_s(:delimited) if capital.present? %></td>
+                    <td><%= trade_history.fee_amount.to_s(:delimited)%></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
