--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,13 +28,16 @@
             <li><%= link_to '未約定注文一覧', active_orders_path %></li>
             <li><%= link_to '取引履歴', trade_histories_path %></li>
             <li><%= link_to 'PL', reports_pl_path %></li>
+            <li><%= link_to '差益一覧', capitals_path %></li>
             <li><%= link_to '実行ログ', bots_path %></li>
-            <li><%= link_to '入出金履歴', wallet_histories_path %></li>
             <li><%= link_to '財布', wallets_path %></li>
             <li><%= link_to 'zaif', "https://zaif.jp/trade_btc_jpy",{:target => "_blank"} %></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">マスタ<span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                etc<span class="caret"></span>
+              </a>
               <ul class="dropdown-menu">
+                <li><%= link_to '入出金履歴', wallet_histories_path %></li>
                 <li><%= link_to '対象通貨', targets_path %></li>
                 <li><%= link_to '通貨マスタ', currency_pairs_path %></li>
                 <li><%= link_to '売買掛け率', trade_settings_path %></li>
