--- a/app/views/trade_histories/show.html.erb
+++ b/app/views/trade_histories/show.html.erb
@@ -1,39 +1,47 @@
 <p id="notice"><%= notice %></p>
 <p>
-	<strong>Order:</strong>
-	<%= @trade_history.order_id %>
+  <strong>Order:</strong>
+  <%= @trade_history.order_id %>
 </p>
 <p>
-	<strong>Currency pair:</strong>
-	<%= @trade_history.currency_pair %>
+  <strong>Currency pair:</strong>
+  <%= @trade_history.currency_pair %>
 </p>
 <p>
-	<strong>Action:</strong>
-	<%= @trade_history.action %>
+  <strong>Action:</strong>
+  <%= @trade_history.action %>
 </p>
 <p>
-	<strong>Amount:</strong>
-	<%= @trade_history.amount %>
+  <strong>Amount:</strong>
+  <%= @trade_history.amount %>
 </p>
 <p>
-	<strong>Price:</strong>
-	<%= @trade_history.price %>
+  <strong>Price:</strong>
+  <%= @trade_history.price %>
 </p>
 <p>
-	<strong>Fee:</strong>
-	<%= @trade_history.fee %>
+  <strong>Fee:</strong>
+  <%= @trade_history.fee %>
 </p>
 <p>
-	<strong>Your action:</strong>
-	<%= @trade_history.your_action %>
+  <strong>FeeAmount:</strong>
+  <%= @trade_history.fee_amount %>
 </p>
 <p>
-	<strong>Timestamp:</strong>
-	<%= @trade_history.timestamp %>
+  <strong>contract_price:</strong>
+  <%= @trade_history.contract_price %>
 </p>
 <p>
-	<strong>transaction_id:</strong>
-	<%= @trade_history.transaction_id %>
+  <strong>Your action:</strong>
+  <%= @trade_history.your_action %>
+</p>
+<p>
+  <strong>Timestamp:</strong>
+  <%= @trade_history.timestamp %> : <%= Time.at(@trade_history.timestamp.to_i) %>
+</p>
+<p>
+  <strong>transaction_id:</strong>
+  <%= @trade_history.transaction_id %>
 </p>
 <%= link_to 'Edit', edit_trade_history_path(@trade_history) %> |
 <%= link_to 'Back', trade_histories_path %>
