--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
             <li><%= link_to '未約定注文一覧', active_orders_path %></li>
             <li><%= link_to '取引履歴', trade_histories_path %></li>
             <li><%= link_to 'PL', reports_pl_path %></li>
-            <li><%= link_to '差益一覧', capitals_path %></li>
+            <li><%= link_to '売買差益', capitals_path %></li>
             <li><%= link_to '実行ログ', bots_path %></li>
             <li><%= link_to '財布', wallets_path %></li>
             <li><%= link_to 'zaif', "https://zaif.jp/trade_btc_jpy",{:target => "_blank"} %></li>
