--- a/app/views/reports/pl.html.erb
+++ b/app/views/reports/pl.html.erb
@@ -47,7 +47,7 @@ sells = @th.select{|a| a.your_action == "ask"}
     </div>
     <div class="col-md-9">
       <div class="panel panel-default">
-        <div class="panel-heading">日別仕入売上</div>
+        <div class="panel-heading">日別仕入売上(買い～売り1セットの利益計算)</div>
         <div class="table-responsive">
           <table class="table table-hover txt-right">
             <thead>
@@ -69,6 +69,11 @@ sells = @th.select{|a| a.your_action == "ask"}
               sell_row = sells.select{|a| a[:day] == d}.first
               bid_price =  bid_row.present? ? bid_row.contract_price.round : 0
               sell_price = sell_row.present? ? sell_row.contract_price.round : 0
+              
+              #システム上仕入れが多くなってしまうため、利益計算テーブルから利益を取得する
+              capital_row = @capitals.select{|a| a.day == d}.first
+              #買いだけあって、売りが成立していない場合は、利益がないケースもある
+              capital = capital_row.present? ? capital_row.capital.round : 0
               %>
                 <tr>
                   <td><%=d%></td>
@@ -78,7 +83,7 @@ sells = @th.select{|a| a.your_action == "ask"}
                   <td>売上</td>
                   <td><%= sell_row.present? ? sell_row.count : 0 %></td>
                   <td><%= sell_price.to_s(:delimited) %></td>
-                  <td><%= (sell_price - bid_price).to_s(:delimited) %></td>
+                  <td><%= capital.to_s(:delimited) %></td>
                 </tr>
               <% end %>
               <tr class="active">
@@ -93,7 +98,7 @@ sells = @th.select{|a| a.your_action == "ask"}
                 <td>売上計</td>
                 <td><%= sells.map(&:count).inject(:+) %></td>
                 <td><%= total_sell.round.to_s(:delimited) %></td>
-                <td><%= (total_sell - total_bid).round.to_s(:delimited) %></td>
+                <td><%= @capitals.map(&:capital).inject(:+).round.to_s(:delimited) %></td>
               </tr>
             </tbody>
           </table>
