[update] 未約定一覧：現在単価の表示 #35

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -148,10 +148,13 @@ data = [['date','capital']]
                     <td class="hidden-xs"><%= active_order.transaction_id %></td>
                     <td><%= active_order.currency_pair %></td>
                     <td><%= t(active_order.action) %></td>
-                    <td><%= active_order.price.to_s(:delimited) %></td>
+                    <td>
+                      <div><%= active_order.price.to_s(:delimited) %></div>
+                      <div><small class="text-muted"><%= get_recent_price(active_order.currency_pair).to_s(:delimited) %></small></div>
+                    </td>
                     <td><%= active_order.amount.to_s(:delimited) %></td>
                     <td><%= active_order.contract_price.round.to_s(:delimited) %></td>
-                    <td><%= active_order.lower_limit %></td>
+                    <td><%= active_order.lower_limit.round.to_s(:delimited) %></td>
                   </tr>
                 <% end %>
               </tbody>
