--- a/app/views/wallets/_form.html.erb
+++ b/app/views/wallets/_form.html.erb
@@ -18,8 +18,8 @@
     <%= form.text_field :money, id: :wallet_money %>
   </div>
   <div class="field">
-    <%= form.label :is_loscat %>
-    <%= form.check_box :is_loscat %>
+    <%= form.label :is_losscut %>
+    <%= form.check_box :is_losscut %>
   </div>
   <div class="actions">
     <%= form.submit %>
