--- a/app/views/wallets/show.html.erb
+++ b/app/views/wallets/show.html.erb
@@ -1,15 +1,15 @@
 <p id="notice"><%= notice %></p>
 <p>
-	<strong>Currency type:</strong>
-	<%= @wallet.currency_type %>
+  <strong>Currency type:</strong>
+  <%= @wallet.currency_type %>
 </p>
 <p>
-	<strong>Money:</strong>
-	<%= @wallet.money %>
+  <strong>Money:</strong>
+  <%= @wallet.money %>
 </p>
 <p>
-	<strong>IsLoscat:</strong>
-	<%= @wallet.is_loscat %>
+  <strong>Islosscut:</strong>
+  <%= @wallet.is_losscut %>
 </p>
 <%= link_to 'Edit', edit_wallet_path(@wallet) %> |
 <%= link_to 'Back', wallets_path %>
