--- a/app/views/reports/pl.html.erb
+++ b/app/views/reports/pl.html.erb
@@ -29,8 +29,8 @@ sells = @th.select{|a| a.your_action == "ask"}
                 <tr>
                   <td>
                     <%= wallet.currency_type %>
-                    <% if wallet.is_loscat %>
-                      <span class="label label-danger">loscut</span>
+                    <% if wallet.is_losscut %>
+                      <span class="label label-danger">losscut</span>
                     <% end %>
                   </td>
                   <td><%= wallet.money.to_s(:delimited) %></td>
