--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Currency type</th>
       <th>Money</th>
-      <th>is_loscat</th>
+      <th>is_losscut</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,7 +14,7 @@
       <tr>
         <td><%= wallet.currency_type %></td>
         <td><%= wallet.money %></td>
-        <td><%= wallet.is_loscat %></td>
+        <td><%= wallet.is_losscut %></td>
         <td><%= link_to 'Show', wallet %></td>
         <td><%= link_to 'Edit', edit_wallet_path(wallet) %></td>
         <td><%= link_to 'Destroy', wallet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
