[change] 設定マスタのカラム名変更 #37

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
                 <li><%= link_to '入出金履歴', wallet_histories_path %></li>
                 <li><%= link_to '対象通貨', targets_path %></li>
                 <li><%= link_to '通貨マスタ', currency_pairs_path %></li>
-                <li><%= link_to '売買掛け率', trade_settings_path %></li>
+                <li><%= link_to '設定マスタ', trade_settings_path %></li>
               </ul>
             </li>
             <li class="dropdown">
