--- a/app/views/trade_settings/index.html.erb
+++ b/app/views/trade_settings/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Trade type</th>
-      <th>Percent</th>
+      <th>value</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,7 +12,7 @@
     <% @trade_settings.each do |trade_setting| %>
       <tr>
         <td><%= trade_setting.trade_type %></td>
-        <td><%= trade_setting.percent %></td>
+        <td><%= trade_setting.value %></td>
         <td><%= link_to 'Show', trade_setting %></td>
         <td><%= link_to 'Edit', edit_trade_setting_path(trade_setting) %></td>
         <td><%= link_to 'Destroy', trade_setting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
