[change] 購入単価取得元をコイン履歴最新に変更

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,7 @@ data = [['date','capital']]
           <button class="btn btn-default">掛け率</button>
           <% @t_settings.each do |s| %>
             <a class="btn btn-default" href="<%= edit_trade_setting_path(s) %>">
-              <%= s.trade_type %>:<%= s.value.to_s %>%
+              <%= s.trade_type %>:<%= s.value.to_s %>
             </a>
           <% end %>
         </div>
