--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to 'コイン価格平均', average_currency_histories_path %></li>
+            <li><%= link_to 'コイン価格平均', reports_average_path %></li>
             <li><%= link_to '未約定注文一覧', active_orders_path %></li>
             <li><%= link_to '取引履歴', trade_histories_path %></li>
             <li><%= link_to 'PL', reports_pl_path %></li>
