[update] ActiveJobによるバックグランド実行 #20

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
             <li><%= link_to 'PL', reports_pl_path %></li>
             <li><%= link_to '売買差益', capitals_path %></li>
             <li><%= link_to '実行ログ', bots_path %></li>
+            <li><%= link_to 'jobs', reports_jobs_path %></li>
             <li><%= link_to '財布', wallets_path %></li>
             <li><%= link_to 'zaif', "https://zaif.jp/trade_btc_jpy",{:target => "_blank"} %></li>
             <li class="dropdown">
